--- a/index.html
+++ b/index.html
@@ -29,10 +29,18 @@
 			</section>
 
 			<section>
-				<h3>Dataset</h3>
+				<h3>Dataset Quality</h3>
 	
 				<p>Initially when assessing the data I found some issues such as: 
 					</p>
+
+					<figure>
+						<img src="IMAGE_FILENAME" alt="" />
+						<figcaption>
+						The fields for Back Bay and Mission Hill Neighborhoods had null values for different demographic metrics as noted in this map of different neighborhoods in Boston and Asian Pacific Islander population. Although it might not have been noticed at first a closer look at the data and map showed these issues. I removed those neighborhoods from my analysis for more accurate visualizations. 
+						</figcaption>
+					</figure>
+
 			</section>
 
 			<h3>Overall Analysis Questions</h3>
@@ -122,7 +130,8 @@
 			<h2>Summary</h2>
 
 			<p>There were several limitations in the data that prevented me from doing a more thorough analysis, such as not having data that was collected every year (data was the same every year for several measures). Only having corporate ownership rates and owner occupancy rates be responsive to the year made it more difficult to show relationships with other variables over time. Additionally there was data that would have been very helpful to supplement and bolster my analysis such as income data, rental rates, and more elaborate housing data. Another limitation was just my technical skills when it came to doing specific tasks primarily around merging and joining spatial data in Tableau. 
-
+			</p>
+			<p>
 				However, from my analysis I was able to identify a few patterns or highlights. Neighborhoods like South Boston Waterfront and Downtown have seen the most changes in corporate ownership and have the highest corporate ownership today–this is likely due to new construction and investment in these neighborhoods. To show this, it would be great to have accurate property data that showed total units over time which if there was new construction or speculation. Additionally, these neighborhoods have high White populations which I am curious if is a historic trend. It would be interesting to see data on property values by neighborhood and median income in these neighborhoods over time to understand economic and social changes to the neighborhood. With further analysis, it is likely neighborhoods with a high racial minority population which are being most impacted by speculation and evictions. We see this through the maps of race by neighborhood, the bar chart of owner occupancy and vacancy by neighborhood, and the color-coded table which both highlight Roxbury and Dorchester as potential hotspots. With high levels of vacant units it is likely that the owner occupancy rate is due to private buyers that are buying the properties as an asset, and are not living in the property fulltime, likely displacing families who need housing. Additional analysis may be needed to come to an effective conclusion, however, this data tracks with the readings which provide evidence of higher evictions and speculation across minority neighborhoods in Massachusetts. 
 				</p>
 		</section>
