--- a/index.html
+++ b/index.html
@@ -45,10 +45,17 @@
 
 			<h3>Overall Analysis Questions</h3>
 			<ol>
-				<li>QUESTION_1</li>
-				<li>QUESTION_2</li>
-				<li>QUESTION_3</li>
-				<li>...</li>
+				<li> What neighborhoods in Boston face the most speculation?</li>
+				<p> I am interested in answering this question because I am cognizant of the impacts evictions have on neighborhoods, such as gentrification and speculation. After reading the articles on eviction, I suspect that speculation would occur in neighborhoods of color, but am interested to see which neighborhoods specifically are most impacted. </p>
+				<li>What minority groups are most affected by speculation in Boston?
+				</li>
+				<p>Similarly to question one, since we are focused on corporate ownership and absentee owners I am interested in which racial groups are impacted by speculation. I believe that it is likely not a fair distribution of speculation around the city and is likely centered in Black and Brown communities as mentioned in the article by Huntley Et. al. Answering this question might provide insight to which neighborhoods could benefit from policies that limit speculation in the future and provide assistance to these communities. 
+				</p>
+				<li>How has corporate ownership changed in each Boston neighborhood overtime?</li>
+				<p>I was interested in this question because according to the article (Huntley Et. al) there were more evictions during COVID, and I am interested if corporate ownership in Boston went up after 2020. Having temporal data allows us to see interesting trends that can highlight injustices in our communities. 
+				</p>
+				<li>How has owner occupancy changed in each Boston neighborhood overtime?</li>
+				<p> I am curious how owner occupancy has changed as well in the area to see if similarly to corporate ownership increasing over time, perhaps private ownership has increased. This could be an indication of gentrification and displacement of minority populations.</p>
 			</ol>
 		</section>
 
