--- a/index.html
+++ b/index.html
@@ -84,72 +84,46 @@
 			<figure>
 				<img src="IMAGE_FILENAME" alt="" />
 				<figcaption>
-				ENTER IMAGE CAPTION HERE.
+					To answer questions 1 and 3, I used a line chart to look at the rates of corporate ownership across Boston neighborhoods over time. When looking at these rates from 2004 to 2020 we see a general trend of rates increasing across all Boston neighborhoods. We see the biggest change over time in the South Boston Waterfront neighborhood (which had a rate of 0.38 in 2024) and Downtown (with a rate 0.34 in 2024). Additionally, similar to the findings from the article by Huntley Et. al, we see an increase in corporate ownership rates after 2020 across all neighborhoods, likely indicating a displacement of the original tenants of these properties. I am interested in seeing what the relationship would be between corporate ownership and income level by census tract. 
 				</figcaption>
 			</figure>
 
 			<figure>
 				<img src="IMAGE_FILENAME" alt="" />
 				<figcaption>
-				ENTER IMAGE CAPTION HERE.
+					We look at the owner occupancy rate here with a line graph and see that the rates across all neighborhoods are much more uniform over time than the corporate ownership rate. In many neighborhoods in Boston, there is a small decline in owner occupancy over time especially after 2020. From this visualization, I have other questions that come up for me such as, how does owner occupancy rate relate to vacant units and occupied units currently across Boston? This question may be helpful in understanding what portion of properties owned by private owners are being used as assets by absentee owners versus being lived in. 
 				</figcaption>
 			</figure>
 
 			<figure>
 				<img src="IMAGE_FILENAME" alt="" />
 				<figcaption>
-				ENTER IMAGE CAPTION HERE.
+					To answer the additional question posed above, I use a bar chart and table to show owner occupancy rate, and number of occupied and vacant units in 2024. I filtered the data for this year to see what owner occupancy rate looks like today without being an aggregate average of the metric over time.  I also made owner occupancy a dimension for this analysis. One thing that stands out to me right away from the data is the number of housing units in Dorchester; I wonder if this data is accurate or if it was a mistake in entering the values. We see that owner occupancy rate doesn’t necessarily correlate with unit vacancy, but we see that Dorchester has almost 50% owner occupancy and has the highest number of vacant units (over 60,000 units). Additionally, this chart makes me wonder how the owner occupancy rate relates to rental rates in each neighborhood.
 				</figcaption>
 			</figure>
 
 			<figure>
 				<img src="IMAGE_FILENAME" alt="" />
 				<figcaption>
-				ENTER IMAGE CAPTION HERE.
+					To explore where different racial groups live in Boston, and how these groups might be affected by speculation I mapped the population of different racial groups by Boston neighborhoods. Since the years do not affect the populations (they are all the same overtime), this map serves as a general trend of race in each neighborhood, and can be used for analysis of 2004 to 2024. You can see Mission Hill and Back Bay as having no value since I removed them from the map (they had no data points). I also made the choice to not include populations categorized as AIAN (American Indian and Alaska Native), Other, or Two or More Races because their populations were very small. I found that Dorchester had the largest portion of Black, Hispanic, and Asian residents for each group respectively. When using the bar chart above we see that this might be problematic when considering the number of vacant units in Dorchester. Additionally, there is a large Hispanic population in East Boston, and a large Hispanic and Black population in Roxbury. When comparing the neighborhoods of high minority populations in this visualization and the neighborhoods with larger vacant units in the barchart above it, I make the assumption that Black and Hispanic residents are likely most impacted by evictions/speculation. But, this made me want to have a more clear way of visualizing this hypothesis. From this analysis another question arose: is there a relationship between neighborhoods that have more corporate ownership and a large amount of public housing or low income housing?  
 				</figcaption>
 			</figure>
 
 			<figure>
 				<img src="IMAGE_FILENAME" alt="" />
 				<figcaption>
-				ENTER IMAGE CAPTION HERE.
+					To more clearly visualize the relationship between the corporate ownership rate, owner occupancy rate, and  race by neighborhood, I created a color coded table where larger values are a darker blue and smaller values are a light green. I made sure to take the average for the rates and filtered it for 2020 to understand where the landscape stood during the pandemic. Here we see as we saw above that Dorchester has the largest minority population, as well as a large white population; the neighborhood’s corporate ownership rate is mid-range in our set of values and the owner occupancy rate is also mid-range. Where I see more interesting data is with neighborhoods like South Boston’s Waterfront and Downtown that have a large White population, high corporate ownership and low owner occupancy rate. I suspect this is due to new construction and investment in these neighborhoods. Roxbury is also a neighborhood with a relatively high Black and Hispanic population that may be affected by speculation when looking at the low owner occupancy rate and the higher corporate ownership rate. 
 				</figcaption>
 			</figure>
 
 			<figure>
 				<img src="IMAGE_FILENAME" alt="" />
 				<figcaption>
-				ENTER IMAGE CAPTION HERE.
+					While we don’t have data for the total public housing units or units of low income housing in Boston, I thought it would be interesting to look at the relationship between the Group quarters population and Corporate Ownership rate. With this map, I mapped the population in Group quarters by neighborhood and scaled the symbols by the average corporate ownership by each respective neighborhood. By interpreting the map, we find that Downtown has the largest population of folks in group housing and one of the highest corporate ownership rates. Additionally, we see neighborhoods like Longwood also having a large population in group housing and a larger corporate ownership rate. This may suggest that there is a disparity between inclusive and affordable housing in these neighborhoods, and there has been other social injustices and changes in these neighborhoods to allow more corporate ownership to exist. Group Quarters is also a variable that is not clearly defined in the metadata, but I think from additional research it may include properties such as colleges, detention centers, group housing, and homeless shelters. Regardless it shows a disparity between ownership and folks who live in said neighborhoods. 
 				</figcaption>
 			</figure>
 
-			<figure>
-				<img src="IMAGE_FILENAME" alt="" />
-				<figcaption>
-				ENTER IMAGE CAPTION HERE.
-				</figcaption>
-			</figure>
 
-			<figure>
-				<img src="IMAGE_FILENAME" alt="" />
-				<figcaption>
-				ENTER IMAGE CAPTION HERE.
-				</figcaption>
-			</figure>
-
-			<figure>
-				<img src="IMAGE_FILENAME" alt="" />
-				<figcaption>
-				ENTER IMAGE CAPTION HERE.
-				</figcaption>
-			</figure>
-
-			<figure>
-				<img src="IMAGE_FILENAME" alt="" />
-				<figcaption>
-				ENTER IMAGE CAPTION HERE.
-				</figcaption>
-			</figure>
 		</section>
 
 		<section>
